--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.51.0",
     "date-fns": "^2.29.3",
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
